--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.9.0",
     "jade": "~1.6.0",
     "jwt-simple": "^0.2.0",
+    "minimist": "^1.2.0",
     "moment": "^2.13.0",
     "mongoose": "^4.6.1",
     "morgan": "~1.3.0",
