--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "NODE_ENV=dev mocha"
+    "test": "NODE_ENV=test mocha"
   },
   "dependencies": {
     "async": "^0.9.0",
