--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "NODE_ENV=test mocha test/"
   },
   "dependencies": {
+    "apiextender": "^1.1.1",
     "async": "^2.1.2",
     "body-parser": "~1.8.1",
     "clipboard": "^1.5.12",
