--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "apidoc": {
     "title": "Caport2020User API",
-    "url": "https://cp2020.crs4.it/v1",
+    "url": "http://smartapi.crs4.it/auth/v1",
     "header": {
       "title": "API Overview",
       "filename": "header.md"
@@ -41,6 +41,7 @@
     "footer": {
       "title": "Maintained by CRS4",
       "filename": "footer.md"
-    }
+    },
+    "sampleUrl":"http://smartapi.crs4.it/api/authdemo/v1"
   }
 }
