--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Caport2020UserAPI",
+  "name": "Caport2020AuthAPI",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -32,8 +32,9 @@
     "should": "^4.0.4"
   },
   "apidoc": {
-    "title": "Caport2020User API",
-    "url": "http://smartapi.crs4.it/auth/v1",
+    "name": "Cagliari Port 2020 Authentication API",
+    "title": "Caport2020AuthAPI",
+    "url": "http://smartapi.crs4.it/api/auth/v1",
     "header": {
       "title": "API Overview",
       "filename": "header.md"
