--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "CMCAuthAPI",
   "version": "1.0.0",
+  "license": "GPL-3.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "test": "NODE_ENV=test mocha test/"
   },
   "dependencies": {
-    "apiextender": "^1.1.1",
+    "apiextender": "^2.0.0",
     "async": "^2.1.2",
     "body-parser": "~1.8.1",
     "clipboard": "^1.5.12",
@@ -23,26 +24,12 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
-    "propertiesmanager": "^2.0.1",
+    "propertiesmanager": "^2.0.2",
     "request": "^2.72.0",
     "serve-favicon": "~2.1.3",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
     "should": "^4.0.4"
-  },
-  "apidoc": {
-    "name": "CMC (CRS4 Microservice Core) Authentication API",
-    "title": "CMCAuthAPI",
-    "url": "http://smartapi.crs4.it/api/auth/v1",
-    "header": {
-      "title": "API Overview",
-      "filename": "header.md"
-    },
-    "footer": {
-      "title": "Maintained by CRS4",
-      "filename": "footer.md"
-    },
-    "sampleUrl":"http://smartapi.crs4.it/api/authdemo/v1"
   }
 }
