--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
+    "password-hash": "^1.2.2",
     "propertiesmanager": "^2.0.2",
     "request": "^2.72.0",
     "serve-favicon": "~2.1.3",
