--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "body-parser": "~1.8.1",
     "clipboard": "^1.5.12",
     "cookie-parser": "~1.3.3",
-    "debug": "~2.0.0",
+    "debug": "^2.0.0",
     "express": "~4.9.0",
     "jade": "~1.6.0",
     "jwt-simple": "^0.2.0",
@@ -26,6 +26,7 @@
     "passport-local-mongoose": "^4.0.0",
     "password-hash": "^1.2.2",
     "propertiesmanager": "^2.0.2",
+    "redis": "^2.8.0",
     "request": "^2.72.0",
     "serve-favicon": "~2.1.3",
     "underscore": "^1.7.0"
